--- a/html/Index.html
+++ b/html/Index.html
@@ -8,18 +8,37 @@
       href="https://store.nba.com/content/ws/all/fe94f685-b790-4e79-a715-70b3a96af3f4.svg"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../styles/Nav.css" />
     <title>Fanatics shop</title>
   </head>
   <body>
     <nav>
+      <a class="left" href=""
+        ><img src="../src/assets/Marca.webp" alt="Icon NBA"
+      /></a>
       <ul>
-        <li>
-          <a href="#">My Account</a>
-          <a href="#">Help</a>
-          <a href="#">Track my order</a>
-          <a href="https://www.nba.com/">NBA.com</a>
-        </li>
+        <li><a href="#">My Account</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Track my order</a></li>
+        <li><a href="https://www.nba.com/" target="_blank">NBA.com</a></li>
       </ul>
+      <div class="right">
+        <input type="text" name="search" placeholder="search" />
+        <ul>
+          <li>
+            <a href="#"
+              ><img
+                src="../src/assets/carrito-de-compras.png"
+                alt="shopping"
+                id="shopcar"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </body>
 </html>
