termina landing page en HTML y CSS, inicia product details en HTML

--- a/html/Index.html
+++ b/html/Index.html
@@ -40,5 +40,212 @@
         </ul>
       </div>
     </nav>
+    <nav class="Blue">
+      <ul>
+        <li><a href="#">SHOP BY TEAM</a></li>
+        <li><a href="#">MEN</a></li>
+        <li><a href="#">WOMEN</a></li>
+        <li><a href="#">KIDS</a></li>
+        <li><a href="#">JERSEYS</a></li>
+        <li><a href="#">T-SHIRTS</a></li>
+        <li><a href="#">HATS</a></li>
+        <li><a href="#">HARDWOOD CLASSICS</a></li>
+        <li><a href="#">FOOTWEAR</a></li>
+        <li><a href="#">ACCESSORIES</a></li>
+        <li><a href="#">COLLECTIBLES</a></li>
+        <li><a href="#">SALE</a></li>
+      </ul>
+    </nav>
+    <div class="group1">
+      <h3>Eastern Conference</h3>
+      <div class="grid">
+        <a
+          href="#"
+          ><img
+            class="icon"
+            src="https://store.nba.com/content/ws/195570/NBA_Atlanta_Hawks_Global_Logo_200x200.svg"
+            alt=""
+        /></a>
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Boston_Celtics_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Brooklyn_Nets_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Charlotte_Hornets_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Chicago_Bulls_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/all/95c2bb46-e662-45ed-909f-57d5727624cc.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Detroit_Pistons_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Indiana_Pacers_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Miami_Heat_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Milwaukee_Bucks_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_New_York_Knicks_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Orlando_Magic_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Philadelphia_76ers_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/195570/NBA_Toronto_Raptors_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Washington_Wizards_Global_Logo_200x200.svg"
+          alt=""
+        />
+      </div>
+    </div>
+    <div class="group2">
+      <h3>Western Conference</h3>
+      <div class="grid">
+        <a href="#"
+          ><img
+            class="icon"
+            src="https://store.nba.com/content/ws/157087/NBA_Dallas_Mavericks_Global_Logo_200x200.svg"
+            alt=""
+        /></a>
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Denver_Nuggets_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Golden_State_Warriors_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Houston_Rockets_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Los_Angeles_Clippers_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Los_Angeles_Lakers_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Memphis_Grizzlies_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Minnesota_Timberwolves_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/all/f314b373-0b8e-4e86-a39e-6fa26b4e185d.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Oklahoma_City_Thunder_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Phoenix_Suns_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Portland_Trail_Blazers_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_Sacramento_Kings_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/157087/NBA_San_Antonio_Spurs_Global_Logo_200x200.svg"
+          alt=""
+        />
+        <img
+          class="icon"
+          src="https://store.nba.com/content/ws/all/ed1ff5a0-eedd-467f-aabe-becf58c6d8b5.svg"
+          alt=""
+        />
+      </div>
+    </div>
+    <div class="banner">
+      <img
+        src="https://store.nba.com/content/ws/all/89169d18-b106-4e18-a6c7-6441ec9899d5__1600X800.jpg"
+        alt="Exclusive"
+      />
+    </div>
+    <div class="Pay">
+      <img
+        src="https://store.nba.com/content/ws/all/6d0d7e9a-72b4-4d04-9a44-29a230f770ed__1600X128.jpg"
+        alt=""
+      />
+    </div>
+    <div class="products">
+      <img class="image" src="https://store.nba.com/content/ws/all/f5b5f625-4e03-4501-b24c-7bbfdeea6ace__400X422.jpg" alt="Jerseys"><a href=""></a></img>
+      <img class="image" src="https://store.nba.com/content/ws/all/aba6cf88-53f7-4d05-9306-b2f86e75056c__400X422.jpg" alt="T-shirts"><a href=""></a></img>
+      <img class="image" src="https://store.nba.com/content/ws/all/5eaca947-d203-40fb-b03d-c3d168ca2bc2__400X422.jpg" alt="Hoodies"><a href=""></a></img>
+      <img class="image" src="https://store.nba.com/content/ws/all/6d559be9-5bcb-4848-8510-4ed577a6b377__400X422.jpg" alt="headwear"><a href=""></a></img>
+    </div>
+    <div class="sponsors">
+      <img class="spons" src="https://store.nba.com/content/ws/all/887f06c3-094f-4985-99d2-c95d26bef8e9.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/01c57a1b-224f-4336-a1ee-5be4a3621983.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/63bdebb0-2aa3-49fa-9ef0-8c7760e0ce0b.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/2e0e1f89-5ee5-4df7-a006-e2b551c85d6f.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/c0134657-e8a4-402a-819f-d10aa755bb4c.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/433c94c7-d3ce-48cc-a726-85eeb08cb50d__200X145.jpg" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/ca79e6bd-246b-4b61-b39d-0b590350c1dc.gif" alt="">
+      <img class="spons" src="https://store.nba.com/content/ws/all/c47d0321-2383-47c5-ba30-d68ffaa3c256__200X145.jpg" alt="">
+    </div>
   </body>
 </html>
