--- a/html/Index.html
+++ b/html/Index.html
@@ -232,7 +232,7 @@
       />
     </div>
     <div class="products">
-      <img class="image" src="https://store.nba.com/content/ws/all/f5b5f625-4e03-4501-b24c-7bbfdeea6ace__400X422.jpg" alt="Jerseys"><a href=""></a></img>
+      <a href="./product_detail.html"></img><img class="image" src="https://store.nba.com/content/ws/all/f5b5f625-4e03-4501-b24c-7bbfdeea6ace__400X422.jpg" alt="Jerseys"></a>
       <img class="image" src="https://store.nba.com/content/ws/all/aba6cf88-53f7-4d05-9306-b2f86e75056c__400X422.jpg" alt="T-shirts"><a href=""></a></img>
       <img class="image" src="https://store.nba.com/content/ws/all/5eaca947-d203-40fb-b03d-c3d168ca2bc2__400X422.jpg" alt="Hoodies"><a href=""></a></img>
       <img class="image" src="https://store.nba.com/content/ws/all/6d559be9-5bcb-4848-8510-4ed577a6b377__400X422.jpg" alt="headwear"><a href=""></a></img>
