--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -13,6 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <link rel="stylesheet" href="../styles/Nav.css" />
+    <link rel="stylesheet" href="../product_details.css" />
     <title>Fanatics shop</title>
   </head>
   <body>
@@ -58,6 +59,7 @@
     </nav>
     <aside>
       <details>
+        <summary><b>NBA teams</b></summary>
         <ul>
           <li>Atlanta Hawks</li>
           <li>Boston Celtics</li>
@@ -71,6 +73,109 @@
           <li>Eastern Conference</li>
         </ul>
       </details>
+      <details>
+        <summary><b>Gender/Age</b></summary>
+        <ul>
+          <li>Men</li>
+          <li>Women</li>
+          <li>kids</li>
+          <li>Baby</li>
+          <li>Big & Tall</li>
+        </ul>
+      </details>
+      <details>
+        <summary><b>Sub Department</b></summary>
+        <ul>
+          <li>Authentic</li>
+          <li>Replica</li>
+          <li>Swingman</li>
+          <li>Throwback</li>
+        </ul>
+      </details>
+      <details>
+        <summary><b>Featured Brands</b></summary>
+        <ul>
+          <li>Fanatics Branded</li>
+          <li>Jordan Brand</li>
+          <li>Mitchell & Ness</li>
+          <li>Nike</li>
+        </ul>
+      </details>
+      <details>
+        <summary><b>Color/Style</b></summary>
+        <ul>
+          <li>All Star</li>
+          <li>Association</li>
+          <li>City</li>
+          <li>City Edition</li>
+          <li>Classic</li>
+          <li>Fashion</li>
+          <li>Icon</li>
+          <li>Limited</li>
+          <li>Olympic</li>
+          <li>Retired</li>
+          <li>Statement</li>
+          <li>Throwback</li>
+        </ul>
+      </details>
+      <details>
+        <summary><b>Custom Shop</b></summary>
+        <ul>
+          <li>Custom</li>
+        </ul>
+      </details>
+      <details>
+        <summary><b>Price Range</b></summary>
+        <ul>
+          <li>$10 to $20</li>
+          <li>$20 to $40</li>
+          <li>$40 to $60</li>
+          <li>Over $60</li>
+        </ul>
+      </details>
     </aside>
+
+    <div class="sponsors">
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/887f06c3-094f-4985-99d2-c95d26bef8e9.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/01c57a1b-224f-4336-a1ee-5be4a3621983.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/63bdebb0-2aa3-49fa-9ef0-8c7760e0ce0b.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/2e0e1f89-5ee5-4df7-a006-e2b551c85d6f.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/c0134657-e8a4-402a-819f-d10aa755bb4c.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/433c94c7-d3ce-48cc-a726-85eeb08cb50d__200X145.jpg"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/ca79e6bd-246b-4b61-b39d-0b590350c1dc.gif"
+        alt=""
+      />
+      <img
+        class="spons"
+        src="https://store.nba.com/content/ws/all/c47d0321-2383-47c5-ba30-d68ffaa3c256__200X145.jpg"
+        alt=""
+      />
+    </div>
   </body>
 </html>
