Termina la pagina details y comienza la pagina buy

--- a/html/Index.html
+++ b/html/Index.html
@@ -247,5 +247,9 @@
       <img class="spons" src="https://store.nba.com/content/ws/all/ca79e6bd-246b-4b61-b39d-0b590350c1dc.gif" alt="">
       <img class="spons" src="https://store.nba.com/content/ws/all/c47d0321-2383-47c5-ba30-d68ffaa3c256__200X145.jpg" alt="">
     </div>
+    
+    <div class="footer">
+      <p>NBASTORE.COM is operated by Fanatics Retail Group North, LLC (“FRGN”), or one of its subsidiaries or affiliates (the “Fanatics Entities”) on behalf of NBA Media Ventures, LLC (“NBA”) and/or its affiliated entities (together with the NBA, the “Partner Entities”). ©2013 - 2024, NBA Media Ventures, LLC, FRGN or their respective affiliates and suppliers. All rights reserved. No portion of NBA.com may be duplicated, redistributed or manipulated in any form.</p>
+    </div>
   </body>
 </html>
