Corrige nav en html buy, agrega los nombres adecuados a los selectores

--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -142,18 +142,16 @@
           <div class="paginator">
             <span>145 - 216 of 2834</span>
             <select>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
+              <option value="Top Sellers">Top Sellers</option>
+              <option value="Top Sellers">Lowest Price</option>
+              <option value="Top Sellers">Highest Price</option>
+              <option value="Top Sellers">Newest Items</option>
             </select>
             <select>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
-              <option value="lowest">Lowest Price</option>
+              <option value="72 Items">72 Items</option>
+              <option value="72 Items">24 Items</option>
+              <option value="72 Items">48 Items</option>
+              <option value="72 Items">96 Items</option>
             </select>
           </div>
           <hr />
