--- a/html/buy.html
+++ b/html/buy.html
@@ -76,9 +76,9 @@
         <p>Your Price:</p>
         <div class="details-merch">
             <div class="number">
-                <span>$</span>
+                <sup>$</sup>
                 <span><b>119</b></span>
-                <span>99</span>
+                <sup>99</sup>
             </div>
         </div>
         </div>
@@ -109,7 +109,6 @@
                 <option value="1">5</option>
             </select>
                 <button>Add to Cart</button>
-        </div class="link">
         <a href=".">90-DAY RETURNS</a>
         </div>
         </div>
