agrega al laboratorio 5 lo asignado en el laboratorio 10, inserta contador dinamico en la pagina de productos y crea la clase Product-cart.js

--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../styles/Nav.css" />
+    <link rel="stylesheet" href="./styles/Nav.css" />
     <title>Fanatics shop</title>
   </head>
   <body>
     <nav>
       <a class="left" href=""
-        ><img src="../src/assets/Marca.webp" alt="Icon NBA"
+        ><img src="./src/assets/Marca.webp" alt="Icon NBA"
       /></a>
       <ul>
         <li><a href="#">My Account</a></li>
@@ -32,7 +32,7 @@
           <li>
             <a href="#"
               ><img
-                src="../src/assets/carrito-de-compras.png"
+                src="./src/assets/carrito-de-compras.png"
                 alt="shopping"
                 id="shopcar"
             /></a>
@@ -232,7 +232,7 @@
       />
     </div>
     <div class="products">
-      <a href="./product_detail.html"></img><img class="image" src="https://store.nba.com/content/ws/all/f5b5f625-4e03-4501-b24c-7bbfdeea6ace__400X422.jpg" alt="Jerseys"></a>
+      <a href="./html/product_detail.html"></img><img class="image" src="https://store.nba.com/content/ws/all/f5b5f625-4e03-4501-b24c-7bbfdeea6ace__400X422.jpg" alt="Jerseys"></a>
       <img class="image" src="https://store.nba.com/content/ws/all/aba6cf88-53f7-4d05-9306-b2f86e75056c__400X422.jpg" alt="T-shirts"><a href=""></a></img>
       <img class="image" src="https://store.nba.com/content/ws/all/5eaca947-d203-40fb-b03d-c3d168ca2bc2__400X422.jpg" alt="Hoodies"><a href=""></a></img>
       <img class="image" src="https://store.nba.com/content/ws/all/6d559be9-5bcb-4848-8510-4ed577a6b377__400X422.jpg" alt="headwear"><a href=""></a></img>
