--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -19,7 +19,7 @@
   <body>
     <div>
       <nav>
-        <a class="left" href="./Index.html"
+        <a class="left" href="../Index.html"
           ><img src="../src/assets/Marca.webp" alt="Icon NBA"
         /></a>
         <ul>
@@ -155,296 +155,7 @@
             </select>
           </div>
           <hr />
-          <div class="product-grid">
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <a href="../html/buy.html"
-                    ><img
-                      src="https://fanatics.frgimages.com/golden-state-warriors/unisex-nike-stephen-curry-black-golden-state-warriors-2023/24-swingman-jersey-city-edition_ss5_p-5362487+u-iuhrtqk3vrou0uufwokt+v-5mf9f7o197kysxn17nhg.jpg?_hv=2&w=340"
-                      alt=""
-                  /></a>
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/golden-state-warriors/youth-nike-stephen-curry-royal-golden-state-warriors-swingman-jersey-icon-edition_ss5_p-200061124+u-zyzfpz2kcgn2durbbsid+v-tzohswd247kgtnbvyisi.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/boston-celtics/mens-mitchell-and-ness-larry-bird-kelly-green-boston-celtics-hardwood-classics-swingman-jersey_pi2751000_ff_2751337_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/san-antonio-spurs/unisex-nike-victor-wembanyama-black-san-antonio-spurs-2023-nba-draft-first-round-pick-swingman-jersey-icon-edition_ss5_p-200289618+u-2wvotgouoboizir4gkly+v-o9m38rlfj6z5hxtzdu76.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/philadelphia-76ers/mens-mitchell-and-ness-allen-iverson-black-philadelphia-76ers-2000/01-hardwood-classics-swingman-jersey_pi2751000_ff_2751373_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/los-angeles-lakers/unisex-nike-lebron-james-gold-los-angeles-lakers-swingman-jersey-icon-edition_ss5_p-200040747+u-9ahuglaastmovr3gjzjv+v-mufnyyuuwjfqiz1ahilj.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/boston-celtics/mens-fanatics-branded-jayson-tatum-black-boston-celtics-fast-break-replica-player-jersey-statement-edition_pi4793000_ff_4793072-c4df0d30695598e498dc_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/new-york-knicks/unisex-nike-jalen-brunson-blue-new-york-knicks-swingman-jersey-icon-edition_ss5_p-5270594+u-wjkmhasdp9s5wwzt2bmb+v-vsc8v0podzqmoive9ewb.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/new-york-knicks/youth-fanatics-branded-blue-new-york-knicks-fast-break-custom-replica-jersey-icon-edition_pi2911000_ff_2911773_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/boston-celtics/unisex-jordan-brand-jayson-tatum-black-boston-celtics-swingman-jersey-statement-edition_pi4759000_ff_4759148-9c174412578990acd403_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/los-angeles-lakers/unisex-jordan-brand-lebron-james-purple-los-angeles-lakers-swingman-jersey-statement-edition_ss5_p-200040737+u-tdqyqqauk5gb8ekxh4q6+v-kfmpenti9rcwp3vs2jpx.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="product-card">
-              <div class="Products">
-                <div class="product-image">
-                  <img
-                    src="https://fanatics.frgimages.com/golden-state-warriors/youth-fanatics-branded-stephen-curry-royal-golden-state-warriors-2022/23-fast-break-replica-player-jersey-icon-edition_pi5207000_ff_5207866-03e43c4a39accf9e8f03_full.jpg?_hv=2&w=340"
-                    alt=""
-                  />
-                </div>
-                <div class="details-merch">
-                  <div class="number">
-                    <sup>$</sup>
-                    <span><b>119</b></span>
-                    <sup>99</sup>
-                  </div>
-                  <p class="text">
-                    Unisex Golden State Warriors Stephen Curry Nike Black
-                    2023/24 Swingman Jersey - City Edition
-                  </p>
-                  <h5>Most Popular in Jerseys</h5>
-                  <h5>American Express Jersey Assurance</h5>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="product-grid" id="cards"></div>
         </div>
       </div>
       <div class="sponsors">
@@ -501,5 +212,11 @@
         or manipulated in any form.
       </p>
     </div>
+
+    <script src="../src/assets/components/shopdata.js"></script>
+    <script src="../src/assets/components/data.js"></script>
+    <script src="../src/assets/components/Product-card.js"></script>
+    <script src="../src/assets/components/index.js"></script>
+
   </body>
 </html>
